objects/Integration__c.object
<CustomObject>
    <description>3rd party integrations that could impact the client's current integration.</description>
    <fields>
        <fullName>Active__c</fullName>
        <description>Is this integration Active?</description>
        <inlineHelpText>Is this integration Active?</inlineHelpText>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Integration details</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Integration__c</fullName>
        <inlineHelpText>Name of the 'other' type of integration.</inlineHelpText>
        <label>Other Type of Integration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Integration_s__c</fullName>
        <description>Type of 3rd party integration the client has..</description>
        <label>Type of Integration(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>YoTrack</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Sales Transactions</fullName>
                </value>
                <value>
                    <fullName>PACMAN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integrations</relationshipLabel>
        <relationshipName>Integrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Integration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{00000}</displayFormat>
        <label>Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integrations</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Integration_Type_Other</fullName>
        <active>true</active>
        <description>Other is selected as Type of Integration, complete the Other Type of Integration</description>
        <errorConditionFormula>INCLUDES(Type_of_Integration_s__c, "Other") &amp;&amp;
ISBLANK(Other_Type_of_Integration__c)</errorConditionFormula>
        <errorMessage>Please complete the Other Type of Integration.</errorMessage>
    </validationRules>
</CustomObject>